--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "decay": "^1.0.12",
     "express": "^4.16.3",
     "express-rate-limit": "^2.11.0",
+    "fs": "0.0.1-security",
     "http": "^0.0.0",
     "is-online": "^7.0.0",
     "mongodb": "^3.0.7",
